# Classfocus

./: .replit  main.py  pyproject.toml  requirements_local.txt
Class-Focus/: .gitignore  README_Local_Setup.md  main.py  readme.md  requirements_local.txt  runtime.txt
Class-Focus/.local/attached_assets/: Pasted-Build-a-Python-Flask-web-app-called-ClassFocus-that-reads-webcam-frames-in-the-browser-sends--1755673074110_1755673074112.txt  Pasted-Build-a-Python-Flask-web-app-called-ClassFocus-that-reads-webcam-frames-in-the-browser-sends--1755675165584_1755675165585.txt
Class-Focus/static/: app.js  style.css
Class-Focus/templates/: index.html
attached_assets/: Pasted-Build-a-Python-Flask-web-app-called-ClassFocus-that-reads-webcam-frames-in-the-browser-sends--1755673074110_1755673074112.txt  Pasted-Build-a-Python-Flask-web-app-called-ClassFocus-that-reads-webcam-frames-in-the-browser-sends--1755675165584_1755675165585.txt
static/: app.js  index.html
